# cg

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/algorithms/: CMakeLists.txt
examples/convex_hull/: convex_hull.cpp
examples/operations/: CMakeLists.txt  rectangle_intersects_segment.cpp
examples/skip_list/: CMakeLists.txt  skip_list.cpp
examples/triangulation/: CMakeLists.txt  triangulation.cpp
examples/visibility/: CMakeLists.txt  minkowski.cpp  shortest_path.cpp  visibility3.cpp  visibility_fast.cpp
include/cg/common/: range.h  values.h
include/cg/convex_hull/: dynamic_hull_interface.h
include/cg/operations/: orientation.h  point_in_convex_contour.h
include/cg/primitives/: contour.h  point.h  range.h  rectangle.h  segment.h  triangle.h  vector.h
include/cg/psl/: psl.h
include/cg/triangulation/: triangulation.h
include/cg/visibility/: minkowski_sum.h  shortest_path.h  visibility3.h  visibility_fast.h  visibility_naive.h
include/misc/: Assert.h
tests/: CMakeLists.txt  convex_hull.cpp  holes_test_converter.cpp  minkowski_sum.cpp  orientation.cpp  psl.cpp  random_utils.h  shortest_path.cpp  test_converter.cpp  triangulation.cpp  visibility3.cpp  visibility_naive.cpp
